--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,7 +11,7 @@
     <%= link_to "Search", "#{base_url}pages/search" %>
 		<ul class="level2"> 
 			<li><%= link_to "Seqqle search by sequence", root_path %></li> 
-			<li><%= link_to "CViT search by sequence", "http://search.comparative-legumes.org/cvit/" %></li> 
+      <li><%= link_to "CViT search by sequence", "http://soybase.org:8085/cvit/new" %></li> 
 		</ul> 
 	</li> 
 	<li class="sep">|</li>
