Added links to cvit and leggle in main nav.

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,7 +11,8 @@
     <%= link_to "Search", "#{base_url}pages/search" %>
 		<ul class="level2"> 
 			<li><%= link_to "Seqqle search by sequence", root_path %></li> 
-      <li><%= link_to "CViT search by sequence", "http://soybase.org:8085/cvit/new" %></li> 
+			<li><%= link_to "CViT search by sequence", "http://cvit.comparative-legumes.org/cvit" %></li> 
+			<li><%= link_to "Gene families", "http://leggle.comparative-legumes.org/gene_families" %></li> 
 		</ul> 
 	</li> 
 	<li class="sep">|</li>
