Added resources and changed "Gene Family Pages" to "Leggle Gene Family Pages" in navigation.

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,7 +12,7 @@
 		<ul class="level2"> 
 			<li><%= link_to "Seqqle search by sequence", root_path %></li> 
 			<li><%= link_to "CViT search by sequence", "http://cvit.comparative-legumes.org" %></li> 
-			<li><%= link_to "Gene families", "http://leggle.comparative-legumes.org" %></li> 
+			<li><%= link_to "Leggle Gene Family Pages", "http://leggle.comparative-legumes.org" %></li> 
 		</ul> 
 	</li> 
 	<li class="sep">|</li>
@@ -48,4 +48,6 @@
     </li>
 	<li class="sep">|</li>
 	<li><%= link_to "Collaborators", "#{base_url}pages/collaborators" %></li> 
+	<li class="sep">|</li>
+	<li><%= link_to "Resources", "#{base_url}pages/resources" %></li> 
 </ul> 
