Upgraded to Rails 2.3.14. Removed linkouts to Alpheus and GDE. Added Cc to CMTV view.

--- a/app/views/seqqles/_seqqle_header_search.html.erb
+++ b/app/views/seqqles/_seqqle_header_search.html.erb
@@ -5,9 +5,9 @@
 </p>
 <p>
 	<strong>Experimental Features</strong>. To view all your query sequences in full genomic context we've
-	introduced global views using Genome Drawing Engine (GDE version 1.2, Kevin Feely, USDA-ARS)
-	and <a href="http://www.ncbi.nlm.nih.gov/pubmed/15604756">Comparative map and trait viewer</a>
+	introduced global views using
+	<a href="http://www.ncbi.nlm.nih.gov/pubmed/15604756">Comparative map and trait viewer</a>
 	(CMTV). Query sequences will be displayed on the full genomes of <i>Glycine max</i> (soybean), <i>Lotus japonicus</i>,
-  <i>Cajanus cajan</i> (pigeon pea), and <i>Medicago truncatula</i>. Check out the <strong>GDE view</strong> and
-  <strong>CMTV view</strong> links on search results page.
+  <i>Cajanus cajan</i> (pigeon pea), and <i>Medicago truncatula</i>. Check out the <strong>CMTV view</strong>
+  links on search results page.
 </p>
