--- a/app/views/seqqles/_seqqle_header_results.html.erb
+++ b/app/views/seqqles/_seqqle_header_results.html.erb
@@ -5,8 +5,8 @@
 </p>
 <p>
 	<strong>Experimental Features</strong>. To view all your query sequences in full genomic context we've
-	introduced global views using Genome Drawing Engine (GDE version 1.2, Kevin Feely, USDA-ARS) and
+	introduced global views using
 	<a href="http://www.ncbi.nlm.nih.gov/pubmed/15604756">Comparative map and trait viewer</a>.
-	Click on a GDE view or CMTV view below to get started. Note that CMTV is a Java Web Start app, and it requires
+	Click on a CMTV view below to get started. Note that CMTV is a Java Web Start app, and it requires
 	Java 1.5 or higher on your system. It probably will take a minute or so to load the first time you use it.
 </p>
